--- a/packages/stylelint-plugin-burneeble/package.json
+++ b/packages/stylelint-plugin-burneeble/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stylelint-plugin-burneeble",
-  "version": "1.0.1",
+  "name": "@burneeble/stylelint-plugin-burneeble",
+  "version": "0.0.0",
   "description": "Burneeble style rules",
   "main": "index.js",
   "scripts": {
