--- a/packages/eslint-plugin-burneeble/package.json
+++ b/packages/eslint-plugin-burneeble/package.json
@@ -7,6 +7,7 @@
     "eslintplugin",
     "eslint-plugin"
   ],
+  "private": false,
   "author": "Burneeble",
   "main": "./lib/index.js",
   "exports": "./lib/index.js",
