--- a/packages/stylelint-plugin-burneeble/package.json
+++ b/packages/stylelint-plugin-burneeble/package.json
@@ -5,11 +5,22 @@
   "main": "index.js",
   "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape ./src/test/*.test.js"
   },
   "publishConfig": {
     "access": "public"
   },
   "author": "Burneeble",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "jest-preset-stylelint": "^6.1.0",
+    "stylelint-test-rule-tape": "^0.2.0"
+  },
+  "jest": {
+    "preset": "jest-preset-stylelint",
+    "testMatch": [
+      "**/src/test/*.test.js"
+    ]
+  }
 }
