--- a/packages/eslint-plugin-burneeble/package.json
+++ b/packages/eslint-plugin-burneeble/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burneeble/eslint-plugin-burneeble",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Burneeble javascript rules",
   "keywords": [
     "eslint",
@@ -26,6 +26,7 @@
     "eslint-doc-generator": "^1.0.0",
     "eslint-plugin-eslint-plugin": "^5.0.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.34.1",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5"
   },
