--- a/packages/eslint-plugin-burneeble/package.json
+++ b/packages/eslint-plugin-burneeble/package.json
@@ -22,12 +22,14 @@
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.19.0",
-    "eslint-doc-generator": "^1.0.0",
-    "eslint-plugin-eslint-plugin": "^5.0.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
+    "eslint": "9.11.1",
+    "eslint-doc-generator": "1.7.1",
+    "eslint-plugin-eslint-plugin": "6.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "mocha": "^10.0.0",
+    "eslint-plugin-react": "^7.36.1",
+    "mocha": "^10.7.3",
     "npm-run-all": "^4.1.5"
   },
   "engines": {
