--- a/packages/eslint-plugin-burneeble/package.json
+++ b/packages/eslint-plugin-burneeble/package.json
@@ -13,7 +13,7 @@
   "exports": "./lib/index.js",
   "scripts": {
     "lint": "npm-run-all \"lint:*\"",
-    "lint:eslint-docs": "npm-run-all \"update:eslint-docs -- --check\"",
+    "lint:eslint-docs": "npm-run-all \"update:eslint-docs --check\"",
     "lint:js": "eslint .",
     "test": "mocha tests --recursive",
     "update:eslint-docs": "eslint-doc-generator"
@@ -27,7 +27,6 @@
     "eslint": "9.11.1",
     "eslint-doc-generator": "1.7.1",
     "eslint-plugin-eslint-plugin": "6.2.0",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.36.1",
     "mocha": "^10.7.3",
     "npm-run-all": "^4.1.5"
